--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p></p>
           </div>
           <div class="time-buttons">
-            <audio id="click-sound" src="./assets//sound/click.mp3"></audio>
+            <audio id="click-sound" src=""></audio>
             <button id="start-btn">Start</button>
             <button id="stop-btn">Stop</button>
             <button id="reset-btn">Reset</button>
